--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-.google-visualization-table-th{
-  font-size:10px;
+.google-visualization-table-th,.google-visualization-table-td{
+  font-size:10px !important;
 }
